--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ pandas = "^1.3"
 numpy = "^1.21"
 
 [tool.poetry.dev-dependencies]
+autopep8 = "^1.6.0"
+jupyterlab = "^3.4.2"
+jupytext = "^1.13.8"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
