--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ numpyro = "^0.9.2"
 matplotlib = "^3.5.2"
 pandas = "^1.3"
 numpy = "^1.21"
+graphviz = "^0.20"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.6.0"
