--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ matplotlib = "^3.5.2"
 pandas = "^1.3"
 numpy = "^1.21"
 graphviz = "^0.20"
+arviz = "^0.12.1"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.6.0"
