--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pandas = "^1.3"
 numpy = "^1.21"
 graphviz = "^0.20"
 arviz = "^0.12.1"
+scipy = "^1.6"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.6.0"
