--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ numpy = "^1.21"
 graphviz = "^0.20"
 arviz = "^0.12.1"
 scipy = "^1.6"
+funsor = "^0.4.3"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.6.0"
