--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ graphviz = "^0.20"
 arviz = "^0.12.1"
 scipy = "^1.6"
 funsor = "^0.4.3"
+seaborn = "^0.11.2"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.6.0"
