--- a/.github/workflows/publish-notebooks.yml
+++ b/.github/workflows/publish-notebooks.yml
@@ -18,7 +18,7 @@ jobs:
         type: now
         from_branch: main
         target_branch: publish
-        github_token: ${{ github.token }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
     - name: Switch to publish
       uses: actions/checkout@v3
       with:
