--- a/.github/workflows/publish-notebooks.yml
+++ b/.github/workflows/publish-notebooks.yml
@@ -10,6 +10,9 @@ jobs:
     strategy:
       max-parallel: 5
 
+    permissions:
+      contents: write
+
     steps:
     - uses: actions/checkout@v3
     - name: Merge main -> publish
