--- a/.github/workflows/publish-notebooks.yml
+++ b/.github/workflows/publish-notebooks.yml
@@ -14,12 +14,11 @@ jobs:
     - uses: actions/checkout@v3
       with:
         ref: main
+        fetch-depth: 0
     - name: Merge main -> publish
       run: |
         git fetch
         git checkout publish
-        git branch
-        git log
         git merge main
     - name: Set up Python 3.7
       uses: actions/setup-python@v3
