debug cannot find jupytext command

--- a/.github/workflows/publish-notebooks.yml
+++ b/.github/workflows/publish-notebooks.yml
@@ -36,7 +36,10 @@ jobs:
         poetry install
     - name: Convert .py scripts to notebooks and execute
       run: |
+        conda activate base
+        which jupyter
         jupytext --to notebook --outdir outputs notebooks/chapter_16.py
     - name: Publish notebooks to html
       run: |
+        conda activate base
         jupyter nbconvert --to html --outdir docs outputs/chapter_16.ipynb
