--- a/.github/workflows/publish-notebooks.yml
+++ b/.github/workflows/publish-notebooks.yml
@@ -33,8 +33,8 @@ jobs:
     - name: Install dependencies
       run: |
         conda env update --file environment.yml --name base
+        poetry config virtualenvs.create false
         poetry install
-        which jupyter
     - name: Convert .py scripts to notebooks and execute
       run: |
         which jupyter
