Change output notebook directory so we can have external image files in the output html

--- a/.github/workflows/publish-notebooks.yml
+++ b/.github/workflows/publish-notebooks.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Publish notebooks to html
       run: |
         mkdir -p docs
-        jupyter nbconvert --to html --embed-images --template classic --output-dir='./docs' outputs/*.ipynb
+        jupyter nbconvert --to html --embed-images --template classic --output-dir='./docs' notebooks/*.ipynb
     - name: Publish
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
