--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,14 @@ authors = ["beekill <nguyenmbquan95@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.7.1"
+python = ">=3.8,<3.12"
 numpyro = "^0.9.2"
 matplotlib = "^3.5.2"
 pandas = "^1.3"
 numpy = "^1.21"
 graphviz = "^0.20"
 arviz = "^0.12.1"
-scipy = "^1.6"
+scipy = "^1.10"
 funsor = "^0.4.3"
 seaborn = "^0.11.2"
 
