--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["beekill <nguyenmbquan95@gmail.com>"]
 license = "MIT"
+packages = [{ include = "numpyro_glm" }]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
@@ -16,13 +17,13 @@ arviz = "^0.12.1"
 scipy = "^1.10"
 funsor = "^0.4.3"
 seaborn = "^0.11.2"
-doit = "^0.36.0"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.6.0"
 jupyterlab = "^3.4.2"
 jupytext = "^1.13.8"
 ipywidgets = "^7.7.0"
+doit = "^0.36.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
