Fix typo in package name, specify package version in __init__.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "numpyo_glm"
+name = "numpyro_glm"
 version = "0.1.0"
 description = ""
 authors = ["beekill <nguyenmbquan95@gmail.com>"]
